--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta name="theme-color" content="#ffffff" />
     <!-- Favicon end -->
     <title>Web Studio</title>
+    <!-- Підключення шрифтів -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,6 +27,10 @@
       rel="stylesheet"
     />
     <!-- підключення стилів css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="body">
