--- a/portfolio.html
+++ b/portfolio.html
@@ -36,186 +36,198 @@
   <body class="body">
     <!-- Header -->
     <header class="page-header">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-web">Studio</span></a
-      >
-      <!-- Site nav -->
-      <nav>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="nav-link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link-current">Портфоліо</a></li>
-          <li><a href="" class="nav-link">Контакти</a></li>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-web">Studio</span></a
+        >
+        <!-- Site nav -->
+        <nav>
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="nav-link">Студія</a></li>
+            <li>
+              <a href="./portfolio.html" class="link-current">Портфоліо</a>
+            </li>
+            <li><a href="" class="nav-link">Контакти</a></li>
+          </ul>
+        </nav>
+        <!-- Авторизація -->
+        <ul class="auth-nav list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="auth-link-mail"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="auth-link-tel"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-      <!-- Авторизація -->
-      <ul class="auth-nav list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="auth-link-mail"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="auth-link-tel"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <!--Мейн-->
     <main class="page-main">
       <!-- Кнопки -->
       <section class="filter">
-        <h1 hidden>Кнопки</h1>
-        <ul class="filter list">
-          <li><button type="button" class="filter-button">Усі</button></li>
-          <li>
-            <button type="button" class="filter-button">Веб-сайти</button>
-          </li>
-          <li><button type="button" class="filter-button">Додатки</button></li>
-          <li><button type="button" class="filter-button">Дизайн</button></li>
-          <li>
-            <button type="button" class="filter-button">Маркетинг</button>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 hidden>Кнопки</h1>
+          <ul class="filter list">
+            <li><button type="button" class="filter-button">Усі</button></li>
+            <li>
+              <button type="button" class="filter-button">Веб-сайти</button>
+            </li>
+            <li>
+              <button type="button" class="filter-button">Додатки</button>
+            </li>
+            <li><button type="button" class="filter-button">Дизайн</button></li>
+            <li>
+              <button type="button" class="filter-button">Маркетинг</button>
+            </li>
+          </ul>
+        </div>
         <!-- Проекти -->
-        <ul class="projects list">
-          <li>
-            <a href="" class="projects-link">
-              <img
-                src="./images/portfolio/img.jpg"
-                alt="відкритий ноутбук"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-title">Технокряк</h2>
-              <p class="projects-text">Веб-сайт</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="projects-link">
-              <img
-                src="./images/portfolio/img1.jpg"
-                alt="два баскетболіста"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-              <p class="projects-text">Дизайн</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="projects-link">
-              <img
-                src="./images/portfolio/img2.jpg"
-                alt="logo ресторана Seafood"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-title">Ресторан Seafood</h2>
-              <p class="projects-text">Додаток</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="projects-link">
-              <img
-                src="./images/portfolio/img3.jpg"
-                alt="навушники"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-title">Проєкт Prime</h2>
-              <p class="projects-text">Маркетинг</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="projects-link">
-              <img
-                src="./images/portfolio/img4.jpg"
-                alt="дві коробки"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-title">Проєкт Boxes</h2>
-              <p class="projects-text">Додаток</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="projects-link">
-              <img
-                src="./images/portfolio/img5.jpg"
-                alt="Монітор"
-                width="370"
-                height="294"
-              />
-              <h2 lang="en" class="projects-title">
-                Inspiration has no Borders
-              </h2>
-              <p class="projects-text">Веб-сайт</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="projects-link">
-              <img
-                src="./images/portfolio/img6.jpg"
-                alt="відкрита книга"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-title">Видання Limited Edition</h2>
-              <p class="projects-text">Дизайн</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="projects-link">
-              <img
-                src="./images/portfolio/img7.jpg"
-                alt="лейбл LAB"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-title">Проєкт LAB</h2>
-              <p class="projects-text">Маркетинг</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="projects-link">
-              <img
-                src="./images/portfolio/img8.jpg"
-                alt="людина працює за ноутбуком"
-                width="370"
-                height="294"
-              />
-              <h2 lang="en" class="projects-title">Growing Business</h2>
-              <p class="projects-text">Додаток</p></a
-            >
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="projects list">
+            <li>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/portfolio/img.jpg"
+                  alt="відкритий ноутбук"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-title">Технокряк</h2>
+                <p class="projects-text">Веб-сайт</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/portfolio/img1.jpg"
+                  alt="два баскетболіста"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+                <p class="projects-text">Дизайн</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/portfolio/img2.jpg"
+                  alt="logo ресторана Seafood"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-title">Ресторан Seafood</h2>
+                <p class="projects-text">Додаток</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/portfolio/img3.jpg"
+                  alt="навушники"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-title">Проєкт Prime</h2>
+                <p class="projects-text">Маркетинг</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/portfolio/img4.jpg"
+                  alt="дві коробки"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-title">Проєкт Boxes</h2>
+                <p class="projects-text">Додаток</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/portfolio/img5.jpg"
+                  alt="Монітор"
+                  width="370"
+                  height="294"
+                />
+                <h2 lang="en" class="projects-title">
+                  Inspiration has no Borders
+                </h2>
+                <p class="projects-text">Веб-сайт</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/portfolio/img6.jpg"
+                  alt="відкрита книга"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-title">Видання Limited Edition</h2>
+                <p class="projects-text">Дизайн</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/portfolio/img7.jpg"
+                  alt="лейбл LAB"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-title">Проєкт LAB</h2>
+                <p class="projects-text">Маркетинг</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/portfolio/img8.jpg"
+                  alt="людина працює за ноутбуком"
+                  width="370"
+                  height="294"
+                />
+                <h2 lang="en" class="projects-title">Growing Business</h2>
+                <p class="projects-text">Додаток</p></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--Footer-->
     <footer class="page-footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-web-footer">Studio</span></a
-      >
-      <ul class="address list">
-        <li>
-          <a
-            href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-            class="footer-link-address"
-            >м. Київ, пр-т Лесі Українки, 26</a
-          >
-        </li>
-        <li>
-          <a href="mailto:info@devstudio.com" class="footer-link-mail"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="footer-link-tel"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-web-footer">Studio</span></a
+        >
+        <ul class="address list">
+          <li>
+            <a
+              href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              class="footer-link-address"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="footer-link-mail"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="footer-link-tel"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
