--- a/index.html
+++ b/index.html
@@ -36,30 +36,32 @@
   <body class="body">
     <!-- Header -->
     <header class="page-header">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-web">Studio</span></a
-      >
-      <!-- Site nav -->
-      <nav>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link-current">Студія</a></li>
-          <li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
-          <li><a href="" class="nav-link">Контакти</a></li>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-web">Studio</span></a
+        >
+        <!-- Site nav -->
+        <nav>
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link-current">Студія</a></li>
+            <li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+            <li><a href="" class="nav-link">Контакти</a></li>
+          </ul>
+        </nav>
+        <!-- Авторизація -->
+        <ul class="auth-nav list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="auth-link-mail"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="auth-link-tel"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-      <!-- Авторизація -->
-      <ul class="auth-nav list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="auth-link-mail"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="auth-link-tel"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <!-- Main -->
     <main class="page-main">
@@ -73,138 +75,146 @@
       </section>
       <!-- Особливості -->
       <section class="features">
-        <h2 hidden>Особливості</h2>
-        <ul class="features list">
-          <li>
-            <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="features-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="features-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">ПЛАНУВАННЯ</h3>
-            <p class="features-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="features-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>Особливості</h2>
+          <ul class="features list">
+            <li>
+              <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="features-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="features-text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">ПЛАНУВАННЯ</h3>
+              <p class="features-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="features-text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Чим ми займаємося -->
       <section class="work">
-        <h2 class="work-title">Чим ми займаємося</h2>
-        <ul class="work list">
-          <li>
-            <img
-              src="./images/img.jpg"
-              alt="Робота з десктопними додатками"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="Робота з мобільними додатками"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="Робота з графікою"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="work-title">Чим ми займаємося</h2>
+          <ul class="work list">
+            <li>
+              <img
+                src="./images/img.jpg"
+                alt="Робота з десктопними додатками"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img1.jpg"
+                alt="Робота з мобільними додатками"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img2.jpg"
+                alt="Робота з графікою"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Наша команда -->
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team list">
-          <li>
-            <img
-              src="./images/img4.jpg"
-              alt="Фото співробітника"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name">Ігор Дем'яненко</h3>
-            <p lang="en" class="team-text">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img5.jpg"
-              alt="Фото співробітника"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name">Ольга Рєпіна</h3>
-            <p lang="en" class="team-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img6.jpg"
-              alt="Фото співробітника"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name">Микола Тарасов</h3>
-            <p lang="en" class="team-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img7.jpg"
-              alt="Фото співробітника"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name">Михайло Єрмаков</h3>
-            <p lang="en" class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team list">
+            <li>
+              <img
+                src="./images/img4.jpg"
+                alt="Фото співробітника"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">Ігор Дем'яненко</h3>
+              <p lang="en" class="team-text">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="./images/img5.jpg"
+                alt="Фото співробітника"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">Ольга Рєпіна</h3>
+              <p lang="en" class="team-text">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/img6.jpg"
+                alt="Фото співробітника"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">Микола Тарасов</h3>
+              <p lang="en" class="team-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/img7.jpg"
+                alt="Фото співробітника"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">Михайло Єрмаков</h3>
+              <p lang="en" class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
     <footer class="page-footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-web-footer">Studio</span></a
-      >
-      <ul class="address list">
-        <li>
-          <a
-            href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-            class="footer-link-address"
-            >м. Київ, пр-т Лесі Українки, 26</a
-          >
-        </li>
-        <li>
-          <a href="mailto:info@devstudio.com" class="footer-link-mail"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="footer-link-tel"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-web-footer">Studio</span></a
+        >
+        <ul class="address list">
+          <li>
+            <a
+              href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              class="footer-link-address"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="footer-link-mail"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="footer-link-tel"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
