--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
     <!--Мейн-->
     <main class="page-main">
       <!-- Кнопки -->
-      <section class="filter">
+      <section class="section">
         <div class="container">
           <h1 hidden>Кнопки</h1>
           <ul class="filter list">
@@ -205,8 +205,8 @@
     <!--Footer-->
     <footer class="page-footer">
       <div class="container">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-web-footer">Studio</span></a
+        <a href="./index.html" class="footer-logo"
+          >Web<span class="logo-footer-web">Studio</span></a
         >
         <ul class="address list">
           <li>
