--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <button type="button" class="hero-button">Замовити послугу</button>
       </section>
       <!-- Особливості -->
-      <section class="features">
+      <section class="section">
         <div class="container">
           <h2 hidden>Особливості</h2>
           <ul class="features list">
@@ -109,7 +109,7 @@
         </div>
       </section>
       <!-- Чим ми займаємося -->
-      <section class="work">
+      <section class="section">
         <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="work list">
@@ -141,7 +141,7 @@
         </div>
       </section>
       <!-- Наша команда -->
-      <section class="team">
+      <section class="section">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team list">
@@ -192,8 +192,8 @@
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-web-footer">Studio</span></a
+        <a href="./index.html" class="footer-logo"
+          >Web<span class="logo-footer-web">Studio</span></a
         >
         <ul class="address list">
           <li>
