--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
       </section>
       <!-- Чим ми займаємося -->
-      <section class="section">
+      <section class="section no-padding">
         <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="work list">
