--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="work list">
-            <li>
+            <li class="work-item">
               <img
                 src="./images/img.jpg"
                 alt="Робота з десктопними додатками"
@@ -121,7 +121,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="work-item">
               <img
                 src="./images/img1.jpg"
                 alt="Робота з мобільними додатками"
@@ -129,7 +129,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="work-item">
               <img
                 src="./images/img2.jpg"
                 alt="Робота з графікою"
@@ -141,11 +141,11 @@
         </div>
       </section>
       <!-- Наша команда -->
-      <section class="section">
+      <section class="section fon">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team list">
-            <li>
+            <li class="team-item">
               <img
                 src="./images/img4.jpg"
                 alt="Фото співробітника"
@@ -155,7 +155,7 @@
               <h3 class="team-name">Ігор Дем'яненко</h3>
               <p lang="en" class="team-text">Product Designer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="./images/img5.jpg"
                 alt="Фото співробітника"
@@ -165,7 +165,7 @@
               <h3 class="team-name">Ольга Рєпіна</h3>
               <p lang="en" class="team-text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="./images/img6.jpg"
                 alt="Фото співробітника"
@@ -175,7 +175,7 @@
               <h3 class="team-name">Микола Тарасов</h3>
               <p lang="en" class="team-text">Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="./images/img7.jpg"
                 alt="Фото співробітника"
