--- a/portfolio.html
+++ b/portfolio.html
@@ -100,9 +100,11 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Технокряк</h2>
-                <p class="projects-text">Веб-сайт</p></a
-              >
+                <div class="projects-name">
+                  <h2 class="projects-title">Технокряк</h2>
+                  <p class="projects-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li>
               <a href="" class="projects-link">
@@ -112,8 +114,12 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-                <p class="projects-text">Дизайн</p></a
+                <div class="projects-name">
+                  <h2 class="projects-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="projects-text">Дизайн</p>
+                </div></a
               >
             </li>
             <li>
@@ -124,8 +130,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Ресторан Seafood</h2>
-                <p class="projects-text">Додаток</p></a
+                <div class="projects-name">
+                  <h2 class="projects-title">Ресторан Seafood</h2>
+                  <p class="projects-text">Додаток</p>
+                </div></a
               >
             </li>
             <li>
@@ -136,8 +144,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Проєкт Prime</h2>
-                <p class="projects-text">Маркетинг</p></a
+                <div class="projects-name">
+                  <h2 class="projects-title">Проєкт Prime</h2>
+                  <p class="projects-text">Маркетинг</p>
+                </div></a
               >
             </li>
             <li>
@@ -148,8 +158,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Проєкт Boxes</h2>
-                <p class="projects-text">Додаток</p></a
+                <div class="projects-name">
+                  <h2 class="projects-title">Проєкт Boxes</h2>
+                  <p class="projects-text">Додаток</p>
+                </div></a
               >
             </li>
             <li>
@@ -160,10 +172,12 @@
                   width="370"
                   height="294"
                 />
-                <h2 lang="en" class="projects-title">
-                  Inspiration has no Borders
-                </h2>
-                <p class="projects-text">Веб-сайт</p></a
+                <div class="projects-name">
+                  <h2 lang="en" class="projects-title">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="projects-text">Веб-сайт</p>
+                </div></a
               >
             </li>
             <li>
@@ -174,8 +188,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Видання Limited Edition</h2>
-                <p class="projects-text">Дизайн</p></a
+                <div class="projects-name">
+                  <h2 class="projects-title">Видання Limited Edition</h2>
+                  <p class="projects-text">Дизайн</p>
+                </div></a
               >
             </li>
             <li>
@@ -186,8 +202,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-title">Проєкт LAB</h2>
-                <p class="projects-text">Маркетинг</p></a
+                <div class="projects-name">
+                  <h2 class="projects-title">Проєкт LAB</h2>
+                  <p class="projects-text">Маркетинг</p>
+                </div></a
               >
             </li>
             <li>
@@ -198,9 +216,11 @@
                   width="370"
                   height="294"
                 />
-                <h2 lang="en" class="projects-title">Growing Business</h2>
-                <p class="projects-text">Додаток</p></a
-              >
+                <div class="projects-name">
+                  <h2 lang="en" class="projects-title">Growing Business</h2>
+                  <p class="projects-text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
