--- a/portfolio.html
+++ b/portfolio.html
@@ -47,11 +47,13 @@
         <!-- Site nav -->
         <nav>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="nav-link">Студія</a></li>
-            <li>
+            <li class="link">
+              <a href="./index.html" class="nav-link">Студія</a>
+            </li>
+            <li class="link">
               <a href="./portfolio.html" class="link-current">Портфоліо</a>
             </li>
-            <li><a href="" class="nav-link">Контакти</a></li>
+            <li class="link"><a href="" class="nav-link">Контакти</a></li>
           </ul>
         </nav>
         <!-- Авторизація -->
@@ -92,7 +94,7 @@
         <!-- Проекти -->
         <div class="container">
           <ul class="projects list">
-            <li>
+            <li class="link">
               <a href="" class="projects-link">
                 <img
                   src="./images/portfolio/img.jpg"
@@ -106,7 +108,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="link">
               <a href="" class="projects-link">
                 <img
                   src="./images/portfolio/img1.jpg"
@@ -122,7 +124,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="link">
               <a href="" class="projects-link">
                 <img
                   src="./images/portfolio/img2.jpg"
@@ -136,7 +138,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="link">
               <a href="" class="projects-link">
                 <img
                   src="./images/portfolio/img3.jpg"
@@ -150,7 +152,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="link">
               <a href="" class="projects-link">
                 <img
                   src="./images/portfolio/img4.jpg"
@@ -164,7 +166,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="link">
               <a href="" class="projects-link">
                 <img
                   src="./images/portfolio/img5.jpg"
@@ -180,7 +182,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="link">
               <a href="" class="projects-link">
                 <img
                   src="./images/portfolio/img6.jpg"
@@ -194,7 +196,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="link">
               <a href="" class="projects-link">
                 <img
                   src="./images/portfolio/img7.jpg"
@@ -208,7 +210,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="link">
               <a href="" class="projects-link">
                 <img
                   src="./images/portfolio/img8.jpg"
@@ -233,19 +235,19 @@
           >Web<span class="logo-footer-web">Studio</span></a
         >
         <ul class="address list">
-          <li>
+          <li class="link">
             <a
               href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
               class="footer-link-address"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
+          <li class="link">
             <a href="mailto:info@devstudio.com" class="footer-link-mail"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="link">
             <a href="tel:+380961111111" class="footer-link-tel"
               >+38 096 111 11 11</a
             >
