--- a/index.html
+++ b/index.html
@@ -47,19 +47,23 @@
         <!-- Site nav -->
         <nav>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link-current">Студія</a></li>
-            <li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
-            <li><a href="" class="nav-link">Контакти</a></li>
+            <li class="link">
+              <a href="./index.html" class="link-current">Студія</a>
+            </li>
+            <li class="link">
+              <a href="./portfolio.html" class="nav-link">Портфоліо</a>
+            </li>
+            <li class="link"><a href="" class="nav-link">Контакти</a></li>
           </ul>
         </nav>
         <!-- Авторизація -->
         <ul class="auth-nav list">
-          <li>
+          <li class="link">
             <a href="mailto:info@devstudio.com" class="auth-link-mail"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="link">
             <a href="tel:+380961111111" class="auth-link-tel"
               >+38 096 111 11 11</a
             >
@@ -200,19 +204,19 @@
           >Web<span class="logo-footer-web">Studio</span></a
         >
         <ul class="address list">
-          <li>
+          <li class="link">
             <a
               href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
               class="footer-link-address"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
+          <li class="link">
             <a href="mailto:info@devstudio.com" class="footer-link-mail"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="link">
             <a href="tel:+380961111111" class="footer-link-tel"
               >+38 096 111 11 11</a
             >
