--- a/portfolio.html
+++ b/portfolio.html
@@ -94,8 +94,8 @@
         <!-- Проекти -->
         <div class="container">
           <ul class="projects list">
-            <li class="link">
-              <a href="" class="projects-link">
+            <li class="list-projects">
+              <a href="" class="link">
                 <img
                   src="./images/portfolio/img.jpg"
                   alt="відкритий ноутбук"
@@ -108,8 +108,8 @@
                 </div>
               </a>
             </li>
-            <li class="link">
-              <a href="" class="projects-link">
+            <li class="list-projects">
+              <a href="" class="link">
                 <img
                   src="./images/portfolio/img1.jpg"
                   alt="два баскетболіста"
@@ -124,8 +124,8 @@
                 </div></a
               >
             </li>
-            <li class="link">
-              <a href="" class="projects-link">
+            <li class="list-projects">
+              <a href="" class="link">
                 <img
                   src="./images/portfolio/img2.jpg"
                   alt="logo ресторана Seafood"
@@ -138,8 +138,8 @@
                 </div></a
               >
             </li>
-            <li class="link">
-              <a href="" class="projects-link">
+            <li class="list-projects">
+              <a href="" class="link">
                 <img
                   src="./images/portfolio/img3.jpg"
                   alt="навушники"
@@ -152,8 +152,8 @@
                 </div></a
               >
             </li>
-            <li class="link">
-              <a href="" class="projects-link">
+            <li class="list-projects">
+              <a href="" class="link">
                 <img
                   src="./images/portfolio/img4.jpg"
                   alt="дві коробки"
@@ -166,8 +166,8 @@
                 </div></a
               >
             </li>
-            <li class="link">
-              <a href="" class="projects-link">
+            <li class="list-projects">
+              <a href="" class="link">
                 <img
                   src="./images/portfolio/img5.jpg"
                   alt="Монітор"
@@ -182,8 +182,8 @@
                 </div></a
               >
             </li>
-            <li class="link">
-              <a href="" class="projects-link">
+            <li class="list-projects">
+              <a href="" class="link">
                 <img
                   src="./images/portfolio/img6.jpg"
                   alt="відкрита книга"
@@ -196,8 +196,8 @@
                 </div></a
               >
             </li>
-            <li class="link">
-              <a href="" class="projects-link">
+            <li class="list-projects">
+              <a href="" class="link">
                 <img
                   src="./images/portfolio/img7.jpg"
                   alt="лейбл LAB"
@@ -210,8 +210,8 @@
                 </div></a
               >
             </li>
-            <li class="link">
-              <a href="" class="projects-link">
+            <li class="list-projects">
+              <a href="" class="link">
                 <img
                   src="./images/portfolio/img8.jpg"
                   alt="людина працює за ноутбуком"
