--- a/portfolio.html
+++ b/portfolio.html
@@ -40,30 +40,30 @@
   <body class="body">
     <!-- Header -->
     <header class="page-header">
-      <div class="container">
+      <div class="container header-container">
         <a href="./index.html" class="logo"
           >Web<span class="logo-web">Studio</span></a
         >
         <!-- Site nav -->
-        <nav>
+        <nav class="header-nav">
           <ul class="site-nav list">
             <li class="link">
-              <a href="./index.html" class="nav-link">Студія</a>
+              <a href="./index.html" class="link-current">Студія</a>
             </li>
             <li class="link">
-              <a href="./portfolio.html" class="link-current">Портфоліо</a>
+              <a href="./portfolio.html" class="nav-link">Портфоліо</a>
             </li>
             <li class="link"><a href="" class="nav-link">Контакти</a></li>
           </ul>
         </nav>
         <!-- Авторизація -->
         <ul class="auth-nav list">
-          <li>
+          <li class="link">
             <a href="mailto:info@devstudio.com" class="auth-link-mail"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="link">
             <a href="tel:+380961111111" class="auth-link-tel"
               >+38 096 111 11 11</a
             >
