class="visually-hidden"

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
       <!-- Кнопки -->
       <section class="section">
         <div class="container">
-          <h1 hidden>Кнопки</h1>
+          <h1 class="visually-hidden">Кнопки</h1>
           <ul class="filter list">
             <li><button type="button" class="filter-button">Усі</button></li>
             <li>
@@ -92,6 +92,7 @@
           </ul>
         </div>
         <!-- Проекти -->
+        <h2 class="visually-hidden">Проекти</h2>
         <div class="container">
           <ul class="projects list">
             <li class="list-projects">
