--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <!-- Особливості -->
       <section class="section">
         <div class="container">
-          <h2 hidden>Особливості</h2>
+          <h2 class="visually-hidden">Особливості</h2>
           <ul class="features list">
             <li class="features-list">
               <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
