--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="work list">
-            <li>
+            <li class="work-list">
               <img
                 src="./images/img.jpg"
                 alt="Робота з десктопними додатками"
@@ -131,7 +131,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="work-list">
               <img
                 src="./images/img1.jpg"
                 alt="Робота з
@@ -140,7 +140,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="work-list">
               <img
                 src="./images/img2.jpg"
                 alt="Робота з
