--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@
         <h2 class="visually-hidden">Проекти</h2>
         <div class="container">
           <ul class="projects list">
-            <li class="list-projects">
+            <li class="projects-list">
               <a href="" class="link">
                 <img
                   src="./images/portfolio/img.jpg"
@@ -109,7 +109,7 @@
                 </div>
               </a>
             </li>
-            <li class="list-projects">
+            <li class="projects-list">
               <a href="" class="link">
                 <img
                   src="./images/portfolio/img1.jpg"
@@ -125,7 +125,7 @@
                 </div></a
               >
             </li>
-            <li class="list-projects">
+            <li class="projects-list">
               <a href="" class="link">
                 <img
                   src="./images/portfolio/img2.jpg"
@@ -139,7 +139,7 @@
                 </div></a
               >
             </li>
-            <li class="list-projects">
+            <li class="projects-list">
               <a href="" class="link">
                 <img
                   src="./images/portfolio/img3.jpg"
@@ -153,7 +153,7 @@
                 </div></a
               >
             </li>
-            <li class="list-projects">
+            <li class="projects-list">
               <a href="" class="link">
                 <img
                   src="./images/portfolio/img4.jpg"
@@ -167,7 +167,7 @@
                 </div></a
               >
             </li>
-            <li class="list-projects">
+            <li class="projects-list">
               <a href="" class="link">
                 <img
                   src="./images/portfolio/img5.jpg"
@@ -183,7 +183,7 @@
                 </div></a
               >
             </li>
-            <li class="list-projects">
+            <li class="projects-list">
               <a href="" class="link">
                 <img
                   src="./images/portfolio/img6.jpg"
@@ -197,7 +197,7 @@
                 </div></a
               >
             </li>
-            <li class="list-projects">
+            <li class="projects-list">
               <a href="" class="link">
                 <img
                   src="./images/portfolio/img7.jpg"
@@ -211,7 +211,7 @@
                 </div></a
               >
             </li>
-            <li class="list-projects">
+            <li class="projects-list">
               <a href="" class="link">
                 <img
                   src="./images/portfolio/img8.jpg"
