--- a/portfolio.html
+++ b/portfolio.html
@@ -58,12 +58,12 @@
         </nav>
         <!-- Авторизація -->
         <ul class="auth-nav list">
-          <li class="link">
+          <li class="link link-mail">
             <a href="mailto:info@devstudio.com" class="auth-link-mail"
               >info@devstudio.com</a
             >
           </li>
-          <li class="link">
+          <li class="link link-tel">
             <a href="tel:+380961111111" class="auth-link-tel"
               >+38 096 111 11 11</a
             >
@@ -90,10 +90,6 @@
               <button type="button" class="filter-button">Маркетинг</button>
             </li>
           </ul>
-        </div>
-        <!-- Проекти -->
-        <h2 class="visually-hidden">Проекти</h2>
-        <div class="container">
           <ul class="projects list">
             <li class="projects-list">
               <a href="" class="link">
@@ -235,25 +231,27 @@
         <a href="./index.html" class="footer-logo"
           >Web<span class="logo-footer-web">Studio</span></a
         >
-        <ul class="address list">
-          <li class="link">
-            <a
-              href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-              class="footer-link-address"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li class="link">
-            <a href="mailto:info@devstudio.com" class="footer-link-mail"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="link">
-            <a href="tel:+380961111111" class="footer-link-tel"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        <address class="box-address">
+          <ul class="address list">
+            <li class="link footer-link">
+              <a
+                href="https://www.google.com/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                class="footer-link-address"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="link footer-link">
+              <a href="mailto:info@devstudio.com" class="footer-link-mail"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="link footer-link">
+              <a href="tel:+380961111111" class="footer-link-tel"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </footer>
   </body>
